db & site name updated

--- a/playbook.yml
+++ b/playbook.yml
@@ -6,9 +6,8 @@
     db_user: "wordpress"
     db_password: "wordpress"
     db_database: "wordpress"
-    db_host: "172.31.36.176"
-
-    wp_domain: "edit.fujikomalan.ml"
+    db_host: "db-read.delphin.host"
+    wp_domain: "www.delphin.host"
     wp_repo: "https://github.com/FujiClado/wordpress.git"
 
   tasks:
