--- a/playbook.yml
+++ b/playbook.yml
@@ -3,12 +3,12 @@
   become: true
   hosts: localhost
   vars:
-    db_user: "wordpress"
-    db_password: "wordpress"
-    db_database: "Wordpress"
+    db_user: "blog"
+    db_password: "blog123"
+    db_database: "blog"
     db_host: "db-read.delphin.host"
-    wp_domain: "www.delphin.host"
-    wp_repo: "https://github.com/semantron-tech/wordpress"
+    wp_domain: "prod.delphin.host"
+    wp_repo: "https://github.com/semantron-tech/wordpress-file"
 
   tasks:
 
